Fix tags for main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,8 +61,9 @@ jobs:
             CHANNEL=${{ steps.channel.outputs.prop }}
           push: true
           tags: |
-            ${{ secrets.DOCKER_HUB_USER }}/${{ matrix.image_name }}:latest
-            ${{ secrets.DOCKER_HUB_USER }}/${{ matrix.image_name }}:${{ steps.version.outputs.prop }}
+            deconzcommunity/deconz:latest
+            deconzcommunity/deconz:${{ steps.version.outputs.prop }}
+            deconzcommunity/deconz:${{ steps.channel.outputs.prop }}
           labels: |
             maintainer=${{ github.repository_owner }}
             org.opencontainers.image.vendor=${{ github.repository_owner }}
