--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,9 @@ jobs:
             deconzcommunity/deconz:latest
             deconzcommunity/deconz:${{ steps.version.outputs.prop }}
             deconzcommunity/deconz:${{ steps.channel.outputs.prop }}
+            ghcr.io/deconzcommunity/deconz:latest
+            ghcr.io/deconzcommunity/deconz:${{ steps.version.outputs.prop }}
+            ghcr.io/deconzcommunity/deconz:${{ steps.channel.outputs.prop }}
           labels: |
             maintainer=${{ github.repository_owner }}
             org.opencontainers.image.vendor=${{ github.repository_owner }}
