--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
           build-args: |
             VERSION=${{ steps.version.outputs.prop }}
             CHANNEL=${{ steps.channel.outputs.prop }}
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: |
             deconzcommunity/deconz:latest
             deconzcommunity/deconz:${{ steps.version.outputs.prop }}
