--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 ---
 
-name: Main build and push
+name: Build and push image
 
 on:
   push:
@@ -8,6 +8,10 @@ on:
       - 'docker/**'
       - 'version.json'
     branches: ['main']
+  pull_request:
+    paths:
+      - 'docker/**'
+      - 'version.json'
   workflow_dispatch:
 
 jobs:
@@ -33,13 +37,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}-${{ matrix.platforms }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-${{ github.sha }}-${{ matrix.platforms }}
+            ${{ runner.os }}-buildx-
+
+      - name: Login to DocikerHub
+        if:   github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Login to Container Registry
+        if:   github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -69,7 +84,7 @@ jobs:
           build-args: |
             VERSION=${{ steps.version.outputs.prop }}
             CHANNEL=${{ steps.channel.outputs.prop }}
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: |
             deconzcommunity/deconz:latest
             deconzcommunity/deconz:${{ steps.version.outputs.prop }}
@@ -81,3 +96,5 @@ jobs:
             maintainer=${{ github.repository_owner }}
             org.opencontainers.image.vendor=${{ github.repository_owner }}
             org.opencontainers.image.revision=${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,src=/tmp/.buildx-cache
