Replace sudo for services with gosu

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -33,6 +33,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
 RUN apt-get update && \
     apt-get install -y \
         sudo \
+	gosu \
         curl \
         kmod \
 	libatomic1 \
