Replace or remove sudo (#52)
* Remove unneeded sudo

* Replace sudo for services with gosu

* Remove sudo package

* set deconz as process 1

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,7 +32,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
 # Install deCONZ dependencies
 RUN apt-get update && \
     apt-get install -y \
-        sudo \
+	gosu \
         curl \
         kmod \
 	libatomic1 \
