--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DEBUG_APS=0 \
     DEBUG_ZCL=0 \
     DEBUG_ZDP=0 \
-    DEBUG_OTAU=0 \
+    DEBUG_OTA=0 \
     DEBUG_ERROR=0 \
     DECONZ_DEVICE=0 \
     DECONZ_VNC_MODE=0 \
