Add support for linux/arm/v6

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
             platforms: |-
               linux/amd64
               linux/arm/v7
+              linux/arm/v6
               linux/arm64
             image_name: "docker-deconz"
     steps:
