--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -82,10 +82,10 @@ COPY download-deconz.sh /
 RUN chmod +x /download-deconz.sh && /download-deconz.sh ${VERSION} ${CHANNEL} ${TARGETPLATFORM}
 
 RUN if [ "${TARGETPLATFORM}" = "linux/arm/v6" ] ; then \
-    dpkg -i --add-architecture armhf /deconz.deb
+    dpkg -i --add-architecture armhf /deconz.deb ; fi
 
 RUN if [ "${TARGETPLATFORM}" != "linux/arm/v6" ] ; then \
-    dpkg -i /deconz.deb
+    dpkg -i /deconz.deb ; fi
 
 RUN chown root:root /usr/bin/deCONZ* && \
     setcap CAP_NET_BIND_SERVICE=+eip /usr/bin/deCONZ && \
