Change dpkg to apt for installing deconz

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -82,9 +82,9 @@ COPY download-deconz.sh /
 RUN chmod +x /download-deconz.sh && /download-deconz.sh ${VERSION} ${CHANNEL} ${TARGETPLATFORM}
 
 RUN if [ "${TARGETPLATFORM}" = "linux/arm/v6" ] ; then \
-    dpkg --add-architecture armhf ; fi
+    apt --add-architecture armhf ; fi
 
-RUN dpkg -i /deconz.deb && \
+RUN apt install /deconz.deb && \
     chown root:root /usr/bin/deCONZ* && \
     setcap CAP_NET_BIND_SERVICE=+eip /usr/bin/deCONZ && \
     rm -f /deconz.deb
