--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,8 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DEBUG_APS=0 \
     DEBUG_ZCL=0 \
     DEBUG_ZDP=0 \
+    DEBUG_DDF=0 \
+    DEBUG_DEV=0 \
     DEBUG_OTA=0 \
     DEBUG_ERROR=0 \
     DECONZ_DEVICE=0 \
