Allow setting of dbg-http argument via DEBUG_HTTP.
Adds the ability to set the dbg-http argument when deconz is started,
this defaults to off.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - DEBUG_ZCL=0
       - DEBUG_ZDP=0
       - DEBUG_OTAU=0
+      - DEBUG_HTTP=0
       - DECONZ_DEVICE=/dev/ttyUSB0
       - DECONZ_VNC_MODE=1
       - DECONZ_VNC_PORT=5900
