--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DEBUG_DEV=0 \
     DEBUG_OTA=0 \
     DEBUG_ERROR=0 \
+    DEBUG_HTTP=0 \
     DECONZ_DEVICE=0 \
     DECONZ_VNC_MODE=0 \
     DECONZ_VNC_DISPLAY=0 \
