--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,6 +23,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DECONZ_DEVICE=0 \
     DECONZ_VNC_MODE=0 \
     DECONZ_VNC_DISPLAY=0 \
+    DECONZ_VNC_DISABLE_PASSWORD=0 \
     DECONZ_VNC_PASSWORD=changeme \
     DECONZ_VNC_PASSWORD_FILE=0 \
     DECONZ_VNC_PORT=5900 \
