--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,13 +1,12 @@
 ---
-
 name: Build and push image
 
 on:
   pull_request:
-    types: [ labeled ]
+    types: [labeled]
     paths:
-      - 'docker/**'
-      - 'version.json'
+      - "docker/**"
+      - "version.json"
   workflow_dispatch:
 
 jobs:
@@ -32,7 +31,9 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+        with:
+          provenance: false
 
       - name: Cache Docker layers
         uses: actions/cache@v2
@@ -60,15 +61,15 @@ jobs:
         id: version
         uses: notiz-dev/github-action-json-property@release
         with:
-            path: 'version.json'
-            prop_path: 'version'
+          path: "version.json"
+          prop_path: "version"
 
       - name: get channel
         id: channel
         uses: notiz-dev/github-action-json-property@release
         with:
-            path: 'version.json'
-            prop_path: 'channel'
+          path: "version.json"
+          prop_path: "channel"
 
       - name: Build and push ${{ matrix.name }}
         uses: docker/build-push-action@v2
