--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,16 @@
 ---
-
 name: Build and push image
 
 on:
   push:
     paths:
-      - 'docker/**'
-      - 'version.json'
-    branches: ['main']
+      - "docker/**"
+      - "version.json"
+    branches: ["main"]
   pull_request:
     paths:
-      - 'docker/**'
-      - 'version.json'
+      - "docker/**"
+      - "version.json"
   workflow_dispatch:
 
 jobs:
@@ -35,17 +34,19 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+        with:
+          provenance: false
 
       - name: Login to DocikerHub
-        if:   github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Login to Container Registry
-        if:   github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -56,15 +57,15 @@ jobs:
         id: version
         uses: notiz-dev/github-action-json-property@release
         with:
-            path: 'version.json'
-            prop_path: 'version'
+          path: "version.json"
+          prop_path: "version"
 
       - name: get channel
         id: channel
         uses: notiz-dev/github-action-json-property@release
         with:
-            path: 'version.json'
-            prop_path: 'channel'
+          path: "version.json"
+          prop_path: "channel"
 
       - name: Build and push ${{ matrix.name }}
         uses: docker/build-push-action@v2
