--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -43,7 +43,7 @@ jobs:
             ${{ runner.os }}-buildx-${{ github.sha }}-${{ matrix.platforms }}
             ${{ runner.os }}-buildx-
 
-      - name: Login to DocikerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
