--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DocikerHub
+      - name: Login to DockerHub
         if:   github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
