--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,7 +31,8 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DECONZ_UPNP=1 \
     DECONZ_UID=1000 \
     DECONZ_GID=1000 \
-    DECONZ_START_VERBOSE=0
+    DECONZ_START_VERBOSE=0 \
+    DECONZ_BAUDRATE=0
 
 # Install deCONZ dependencies
 RUN apt-get update && \
