--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:11.5-slim
+FROM debian:12.2-slim
 
 # Build arguments
 ARG VERSION
@@ -40,6 +40,7 @@ RUN apt-get update && \
         gosu \
         curl \
         kmod \
+        udev \
         libatomic1 \
         libcap2-bin \
         libqt5core5a \
@@ -50,7 +51,7 @@ RUN apt-get update && \
         libqt5websockets5 \
         libqt5widgets5 \
         libqt5qml5 \
-        libssl1.1 \
+        libssl3 \
         lsof \
         sqlite3 \
         tigervnc-standalone-server \
