Expose DECONZ_APPDATA_DIR as environment variable

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,7 +32,8 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DECONZ_UID=1000 \
     DECONZ_GID=1000 \
     DECONZ_START_VERBOSE=0 \
-    DECONZ_BAUDRATE=0
+    DECONZ_BAUDRATE=0 \
+    DECONZ_APPDATA_DIR=/opt/deCONZ
 
 # Install deCONZ dependencies
 RUN apt-get update && \
