Added DECONZ_DEV_TEST_MANAGED environment variable

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     DEBUG_OTA=0 \
     DEBUG_ERROR=0 \
     DEBUG_HTTP=0 \
+    DECONZ_DEV_TEST_MANAGED=0 \
     DECONZ_DEVICE=0 \
     DECONZ_VNC_MODE=0 \
     DECONZ_VNC_DISPLAY=0 \
