fix unavailable packages

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -46,15 +46,15 @@ RUN apt-get update && \
         udev \
         libatomic1 \
         libcap2-bin \
-        libqt5core5a \
-        libqt5gui5 \
-        libqt5network5 \
+        libqt5core5t64 \
+        libqt5gui5t64 \
+        libqt5network5t64 \
         libqt5serialport5 \
-        libqt5sql5 \
+        libqt5sql5t64 \
         libqt5websockets5 \
-        libqt5widgets5 \
+        libqt5widgets5t64 \
         libqt5qml5 \
-        libssl3 \
+        libssl3t64 \
         libssl-dev \
         lsof \
         sqlite3 \
