--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:13-slim
+FROM debian:12-slim
 
 # Build arguments
 ARG VERSION
@@ -46,13 +46,13 @@ RUN apt-get update && \
         udev \
         libatomic1 \
         libcap2-bin \
-        libqt5core5t64 \
-        libqt5gui5t64 \
-        libqt5network5t64 \
+        libqt5core5 \
+        libqt5gui5 \
+        libqt5network5 \
         libqt5serialport5 \
-        libqt5sql5t64 \
+        libqt5sql5 \
         libqt5websockets5 \
-        libqt5widgets5t64 \
+        libqt5widgets5 \
         libqt5qml5 \
         libssl3t64 \
         libssl-dev \
