--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,6 +10,7 @@ ARG BUILDPLATFORM
 ENV DEBIAN_FRONTEND=noninteractive \
     DECONZ_VERSION=${VERSION} \
     DECONZ_WEB_PORT=80 \
+    DECONZ_WEBS_PORT=0 \
     DECONZ_WS_PORT=443 \
     DEBUG_INFO=1 \
     DEBUG_APS=0 \
