--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,91 +1,65 @@
 ---
-
-name: Build and push image
+name: Build and push dev image
 
 on:
   pull_request:
-    types: [ labeled ]
+    types: [labeled]
     paths:
       - 'docker/**'
       - 'version.json'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
-  docker-build:
-    if: ${{ github.event.label.name == 'Development-Image' }}
+  dev-build:
+    if: contains(github.event.label.name, 'Dev')
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
           - name: standard
             dockerfile: docker/Dockerfile
-            platforms: |-
-              linux/amd64
-              linux/arm/v7
-              linux/arm64
-            image_name: "docker-deconz"
+            platforms: linux/amd64,linux/arm/v7,linux/arm64
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}-${{ matrix.platforms }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-${{ github.sha }}-${{ matrix.platforms }}
-            ${{ runner.os }}-buildx-
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Login to Container Registry
-        uses: docker/login-action@v1
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: get version
-        id: version
-        uses: notiz-dev/github-action-json-property@release
-        with:
-            path: 'version.json'
-            prop_path: 'version'
-
-      - name: get channel
-        id: channel
-        uses: notiz-dev/github-action-json-property@release
-        with:
-            path: 'version.json'
-            prop_path: 'channel'
-
-      - name: Build and push ${{ matrix.name }}
-        uses: docker/build-push-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
           context: ./docker/
           file: ${{ matrix.dockerfile }}
           platforms: ${{ matrix.platforms }}
-          build-args: |
-            VERSION=${{ steps.version.outputs.prop }}
-            CHANNEL=${{ steps.channel.outputs.prop }}
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           tags: |
-            deconzcommunity/deconz:development
-            ghcr.io/${{ github.repository }}:development
+            deconzcommunity/deconz:dev
+            ghcr.io/${{ github.repository }}:dev
           labels: |
-            maintainer=${{ github.repository_owner }}
             org.opencontainers.image.vendor=${{ github.repository_owner }}
             org.opencontainers.image.revision=${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+            development-build=true
